--- a/ios/teste.xcodeproj/xcshareddata/xcschemes/teste.xcscheme
+++ b/ios/teste.xcodeproj/xcshareddata/xcschemes/teste.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "candie-tvOS.app"
-               BlueprintName = "candie-tvOS"
-               ReferencedContainer = "container:candie.xcodeproj">
+               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+               BuildableName = "teste.app"
+               BlueprintName = "teste"
+               ReferencedContainer = "container:teste.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "candie-tvOSTests.xctest"
-               BlueprintName = "candie-tvOSTests"
-               ReferencedContainer = "container:candie.xcodeproj">
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "testeTests.xctest"
+               BlueprintName = "testeTests"
+               ReferencedContainer = "container:teste.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "candie-tvOS.app"
-            BlueprintName = "candie-tvOS"
-            ReferencedContainer = "container:candie.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "teste.app"
+            BlueprintName = "teste"
+            ReferencedContainer = "container:teste.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "candie-tvOS.app"
-            BlueprintName = "candie-tvOS"
-            ReferencedContainer = "container:candie.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "teste.app"
+            BlueprintName = "teste"
+            ReferencedContainer = "container:teste.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
